2002-08-02  Andrew Lunn <Andrew.Lunn@ascom.ch>

	* cdl/hal_mips.cdl: Redboot exec command can now be disabled 
	  by CDL
	
2002-05-17  Jesper Skov  <jskov@redhat.com>

	* include/hal_intr.h: Fix CYGNUM_HAL_EXCEPTION_MIN definition so
	it reflects the FPU configuration.

2002-04-30  Jesper Skov  <jskov@redhat.com>

	* include/hal_intr.h: Only define decoded FPU vectors if these are
	actually used. This allows tests to check for capabilities and do
	N/A when appropriate.

2002-04-15  Jonathan Larmour  <jlarmour@redhat.com>

	* src/hal_syscall.c (hal_syscall_handler): Add extra sig argument to
	__do_syscall.

2002-03-21  Nick Garnett  <nickg@redhat.com>

	* include/hal_cache.h: Added macros to adjust the size argument to
	some of the cache macros to a whole multiple of the cache line
	size. Otherwise, for some values of the arguments, we can miss the
	last line.

2001-12-17  Jesper Skov  <jskov@redhat.com>

	* include/hal_arch.h (CYGARC_HAL_GET_RETURN_ADDRESS,
	(CYGARC_HAL_GET_RETURN_ADDRESS_BACKUP): Added dummy arguments.

	* src/hal_misc.c (cyg_hal_exception_handler): Fix warning.

2001-12-04  Nick Garnett  <nickg@redhat.com>

	* src/hal_misc.c: Added hal_arch_program_new_stack() to support
	running user programs on a new stack placed at the top of RAM.

	* src/vectors.S: Added hal_program_new_stack function to support
	hal_arch_program_new_stack(). This does the actual stack
	switching.

	* include/mips-stub.h (NUMREGS): 
	* include/mips-regs.h (NUM_REGS):
	Added test to correctly define these when the target expects the
	CP0 registers to be reported to GDB

	* include/hal_arch.h: Added support for fetching CP0 registers in
	MIPS64 platforms for GDB. Reorganized the code slightly.

	* cdl/hal_mips.cdl:
	Added define_proc to define HAL_ARCH_PROGRAM_NEW_STACK.

2001-11-16  Nick Garnett  <nickg@redhat.com>

	* src/hal_misc.c (hal_msbit_index): Fixed this function so that it
	actually works!

2001-10-24  Nick Garnett  <nickg@redhat.com>

	* src/vectors.S: