@@ -1,3 +1,8 @@
+2002-12-12  Bart Veer  <bartv@ecoscentric.com>
+
+	* include/hal_cache.h: allow for cache flushes etc. where the base
+	address is not aligned to a cacheline boundary.
+
 2002-08-02  Andrew Lunn <Andrew.Lunn@ascom.ch>
 
 	* cdl/hal_mips.cdl: Redboot exec command can now be disabled 
